// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid renderList renders correctly 1`] = `
<div
  className="rvdl-grid"
  onDragStart={[Function]}
  onScroll={[Function]}
  style={
    Object {
      "MozUserSelect": "none",
      "background": "transparent",
      "height": "100%",
      "margin": 0,
      "overflow": "auto",
      "padding": 0,
      "position": "absolute",
      "userSelect": "none",
      "width": "100%",
    }
  }
>
  <ul
    onDragStart={[Function]}
    style={
      Object {
        "MozBackfaceVisibility": "hidden",
        "MozPerspective": 1000,
        "MozTransform": "translateZ(0)",
        "MozTransition": "width 0.3s ease 0.2s, height 0.3s ease 0.2s",
        "MozUserSelect": "none",
        "WebkitBackfaceVisibility": "hidden",
        "WebkitPerspective": 1000,
        "WebkitTransform": "translateZ(0)",
        "WebkitTransition": "width 0.3s ease 0.2s, height 0.3s ease 0.2s",
        "backfaceVisibility": "hidden",
        "height": 1000,
        "margin": 0,
        "msTransition": "width 0.3s ease 0.2s, height 0.3s ease 0.2s",
        "mxTransform": "translateZ(0)",
        "padding": 0,
        "perspective": 1000,
        "position": "absolute",
        "transform": "translateZ(0)",
        "transition": "width 0.3s ease 0.2s, height 0.3s ease 0.2s",
        "userSelect": "none",
        "width": 700,
      }
    }
  >
    <GridItem
      GridItemStyles={Object {}}
      data={
        Object {
          "test": "data0",
        }
      }
      fixedHeightAll={null}
      fixedWidthAll={null}
      handleMouseDown={[Function]}
      handleTouchStart={[Function]}
      onDragStart={[Function]}
      shadowBlur={null}
      shadowBlurRatio={1.2}
      shadowColor="rgba(0, 0, 0, 0.2)"
      shadowHRatio={1}
      shadowMultiple={16}
      shadowSpread={null}
      shadowSpreadRatio={0}
      shadowVRatio={1}
      style={
        Object {
          "test": "style0",
        }
      }
      transitionDelay="0.2s"
      transitionDuration="0.3s"
      transitionTimingFunction="ease"
    />
    <GridItem
      GridItemStyles={Object {}}
      data={
        Object {
          "test": "data1",
        }
      }
      fixedHeightAll={null}
      fixedWidthAll={null}
      handleMouseDown={[Function]}
      handleTouchStart={[Function]}
      onDragStart={[Function]}
      shadowBlur={null}
      shadowBlurRatio={1.2}
      shadowColor="rgba(0, 0, 0, 0.2)"
      shadowHRatio={1}
      shadowMultiple={16}
      shadowSpread={null}
      shadowSpreadRatio={0}
      shadowVRatio={1}
      style={
        Object {
          "test": "style1",
        }
      }
      transitionDelay="0.2s"
      transitionDuration="0.3s"
      transitionTimingFunction="ease"
    />
  </ul>
</div>
`;

exports[`Grid renders correctly 1`] = `
<div
  className="rvdl-grid"
  onDragStart={[Function]}
  onScroll={[Function]}
  style={
    Object {
      "MozUserSelect": "none",
      "background": "transparent",
      "height": "100%",
      "margin": 0,
      "overflow": "auto",
      "padding": 0,
      "position": "absolute",
      "userSelect": "none",
      "width": "100%",
    }
  }
>
  <ul
    onDragStart={[Function]}
    style={
      Object {
        "MozBackfaceVisibility": "hidden",
        "MozPerspective": 1000,
        "MozTransform": "translateZ(0)",
        "MozTransition": "width 0.3s ease 0.2s, height 0.3s ease 0.2s",
        "MozUserSelect": "none",
        "WebkitBackfaceVisibility": "hidden",
        "WebkitPerspective": 1000,
        "WebkitTransform": "translateZ(0)",
        "WebkitTransition": "width 0.3s ease 0.2s, height 0.3s ease 0.2s",
        "backfaceVisibility": "hidden",
        "height": 1000,
        "margin": 0,
        "msTransition": "width 0.3s ease 0.2s, height 0.3s ease 0.2s",
        "mxTransform": "translateZ(0)",
        "padding": 0,
        "perspective": 1000,
        "position": "absolute",
        "transform": "translateZ(0)",
        "transition": "width 0.3s ease 0.2s, height 0.3s ease 0.2s",
        "userSelect": "none",
        "width": 700,
      }
    }
  >
    <GridItem
      GridItemStyles={Object {}}
      data={
        Object {
          "item": Object {
            "ItemComponent": [Function],
            "itemProps": Object {
              "name": "test-0",
              "style": Object {
                "height": 100,
                "userSelect": "none",
                "width": 100,
              },
            },
            "key": "test-0",
          },
        }
      }
      fixedHeightAll={null}
      fixedWidthAll={null}
      handleMouseDown={[Function]}
      handleTouchStart={[Function]}
      key="rvdl-list-item-key-test-0"
      onDragStart={[Function]}
      shadowBlur={null}
      shadowBlurRatio={1.2}
      shadowColor="rgba(0, 0, 0, 0.2)"
      shadowHRatio={1}
      shadowMultiple={16}
      shadowSpread={null}
      shadowSpreadRatio={0}
      shadowVRatio={1}
      style={
        Object {
          "height": 100,
          "isPressed": false,
          "wasPressed": false,
          "width": 100,
          "x": 0,
          "y": 0,
        }
      }
      transitionDelay="0.2s"
      transitionDuration="0.3s"
      transitionTimingFunction="ease"
    />
    <GridItem
      GridItemStyles={Object {}}
      data={
        Object {
          "item": Object {
            "ItemComponent": [Function],
            "itemProps": Object {
              "name": "test-1",
              "style": Object {
                "height": 200,
                "userSelect": "none",
                "width": 200,
              },
            },
            "key": "test-1",
          },
        }
      }
      fixedHeightAll={null}
      fixedWidthAll={null}
      handleMouseDown={[Function]}
      handleTouchStart={[Function]}
      key="rvdl-list-item-key-test-1"
      onDragStart={[Function]}
      shadowBlur={null}
      shadowBlurRatio={1.2}
      shadowColor="rgba(0, 0, 0, 0.2)"
      shadowHRatio={1}
      shadowMultiple={16}
      shadowSpread={null}
      shadowSpreadRatio={0}
      shadowVRatio={1}
      style={
        Object {
          "height": 200,
          "isPressed": false,
          "wasPressed": false,
          "width": 200,
          "x": 100,
          "y": 0,
        }
      }
      transitionDelay="0.2s"
      transitionDuration="0.3s"
      transitionTimingFunction="ease"
    />
    <GridItem
      GridItemStyles={Object {}}
      data={
        Object {
          "item": Object {
            "ItemComponent": [Function],
            "itemProps": Object {
              "name": "test-2",
              "style": Object {
                "height": 300,
                "userSelect": "none",
                "width": 300,
              },
            },
            "key": "test-2",
          },
        }
      }
      fixedHeightAll={null}
      fixedWidthAll={null}
      handleMouseDown={[Function]}
      handleTouchStart={[Function]}
      key="rvdl-list-item-key-test-2"
      onDragStart={[Function]}
      shadowBlur={null}
      shadowBlurRatio={1.2}
      shadowColor="rgba(0, 0, 0, 0.2)"
      shadowHRatio={1}
      shadowMultiple={16}
      shadowSpread={null}
      shadowSpreadRatio={0}
      shadowVRatio={1}
      style={
        Object {
          "height": 300,
          "isPressed": false,
          "wasPressed": false,
          "width": 300,
          "x": 0,
          "y": 200,
        }
      }
      transitionDelay="0.2s"
      transitionDuration="0.3s"
      transitionTimingFunction="ease"
    />
    <GridItem
      GridItemStyles={Object {}}
      data={
        Object {
          "item": Object {
            "ItemComponent": [Function],
            "itemProps": Object {
              "name": "test-3",
              "style": Object {
                "height": 400,
                "userSelect": "none",
                "width": 400,
              },
            },
            "key": "test-3",
          },
        }
      }
      fixedHeightAll={null}
      fixedWidthAll={null}
      handleMouseDown={[Function]}
      handleTouchStart={[Function]}
      key="rvdl-list-item-key-test-3"
      onDragStart={[Function]}
      shadowBlur={null}
      shadowBlurRatio={1.2}
      shadowColor="rgba(0, 0, 0, 0.2)"
      shadowHRatio={1}
      shadowMultiple={16}
      shadowSpread={null}
      shadowSpreadRatio={0}
      shadowVRatio={1}
      style={
        Object {
          "height": 400,
          "isPressed": false,
          "wasPressed": false,
          "width": 400,
          "x": 300,
          "y": 0,
        }
      }
      transitionDelay="0.2s"
      transitionDuration="0.3s"
      transitionTimingFunction="ease"
    />
    <GridItem
      GridItemStyles={Object {}}
      data={
        Object {
          "item": Object {
            "ItemComponent": [Function],
            "itemProps": Object {
              "name": "test-4",
              "style": Object {
                "height": 500,
                "userSelect": "none",
                "width": 500,
              },
            },
            "key": "test-4",
          },
        }
      }
      fixedHeightAll={null}
      fixedWidthAll={null}
      handleMouseDown={[Function]}
      handleTouchStart={[Function]}
      key="rvdl-list-item-key-test-4"
      onDragStart={[Function]}
      shadowBlur={null}
      shadowBlurRatio={1.2}
      shadowColor="rgba(0, 0, 0, 0.2)"
      shadowHRatio={1}
      shadowMultiple={16}
      shadowSpread={null}
      shadowSpreadRatio={0}
      shadowVRatio={1}
      style={
        Object {
          "height": 500,
          "isPressed": false,
          "wasPressed": false,
          "width": 500,
          "x": 0,
          "y": 500,
        }
      }
      transitionDelay="0.2s"
      transitionDuration="0.3s"
      transitionTimingFunction="ease"
    />
  </ul>
</div>
`;
